@@ -46,7 +46,9 @@ import com.openlattice.entitysets.EntitySetsApi;
 import com.openlattice.linking.LinkingFeedbackApi;
 import com.openlattice.linking.RealtimeLinkingApi;
 import com.openlattice.mapstores.TestDataFactory;
+import com.openlattice.organization.Organization;
 import com.openlattice.organization.OrganizationsApi;
+import com.openlattice.organization.roles.Role;
 import com.openlattice.postgres.IndexType;
 import com.openlattice.rehearsal.GeneralException;
 import com.openlattice.rehearsal.SetupEnvironment;
@@ -74,15 +76,14 @@ import okhttp3.Request;
 import okhttp3.RequestBody;
 import okhttp3.Response;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.olingo.commons.api.edm.FullQualifiedName;
 import org.junit.Assert;
 import retrofit2.Retrofit;
 
 public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
-    private final static Map<String, Retrofit> retrofitMap = new HashMap<>();
-    private final static Map<String, Retrofit> linkerRetrofitMap = new HashMap<>();
-    private final static Map<String, OkHttpClient> httpClientMap = new HashMap<>();
+    private final static Map<String, Retrofit>     retrofitMap       = new HashMap<>();
+    private final static Map<String, Retrofit>     linkerRetrofitMap = new HashMap<>();
+    private final static Map<String, OkHttpClient> httpClientMap     = new HashMap<>();
 
     protected static EdmApi             edmApi;
     protected static PermissionsApi     permissionsApi;
@@ -183,7 +184,6 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
         }
     }
 
-
     public static PropertyType getBinaryPropertyType() {
         PropertyType pt = TestDataFactory.binaryPropertyType();
         UUID propertyTypeId = edmApi.createPropertyType( pt );
@@ -199,7 +199,7 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
             Map<Permission, Boolean> permissionMap,
             EnumSet<Permission> expectedPermissions ) {
         EnumSet.allOf( Permission.class ).forEach( permission ->
-            Assert.assertEquals( expectedPermissions.contains( permission ), permissionMap.get( permission ) )
+                Assert.assertEquals( expectedPermissions.contains( permission ), permissionMap.get( permission ) )
         );
     }
 
@@ -216,6 +216,7 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
 
     public static PropertyType createDatePropertyType() {
         PropertyType pt = TestDataFactory.datePropertyType();
+        pt.setPostgresIndexType( IndexType.NONE );
         UUID propertyTypeId = edmApi.createPropertyType( pt );
 
         Assert.assertNotNull( "Property type creation returned null value.", propertyTypeId );
@@ -225,6 +226,7 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
 
     public static PropertyType createDateTimePropertyType() {
         PropertyType pt = TestDataFactory.dateTimePropertyType();
+        pt.setPostgresIndexType( IndexType.BTREE );
         UUID propertyTypeId = edmApi.createPropertyType( pt );
 
         Assert.assertNotNull( "Property type creation returned null value.", propertyTypeId );
@@ -233,8 +235,7 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
     }
 
     public static PropertyType createPropertyType() {
-        PropertyType pt = TestDataFactory.propertyType();
-        pt.setPostgresIndexType( IndexType.BTREE );
+        PropertyType pt = TestDataFactory.propertyType( IndexType.BTREE );
         UUID propertyTypeId = edmApi.createPropertyType( pt );
 
         Assert.assertNotNull( "Property type creation returned null value.", propertyTypeId );
@@ -254,9 +255,10 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
         return createEntityType( Optional.empty(), SecurableObjectType.AssociationType, propertyTypes );
     }
 
-    private static EntityType createEntityType( Optional<FullQualifiedName> fqn,
-                                                SecurableObjectType category,
-                                                UUID... propertyTypes ) {
+    private static EntityType createEntityType(
+            Optional<FullQualifiedName> fqn,
+            SecurableObjectType category,
+            UUID... propertyTypes ) {
         PropertyType k = createPropertyType();
         EntityType expected = TestDataFactory.entityType( fqn, category, k );
         expected.removePropertyTypes( expected.getProperties() );
@@ -279,17 +281,25 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
     public static AssociationType createAssociationType(
             EntityType aet,
             Set<EntityType> src,
-            Set<EntityType> dst ) {
+            Set<EntityType> dst,
+            boolean bidirectional ) {
 
         AssociationType expected = new AssociationType( Optional.of( aet ),
                 src.stream().map( EntityType::getId ).collect( Collectors.toCollection( LinkedHashSet::new ) ),
                 dst.stream().map( EntityType::getId ).collect( Collectors.toCollection( LinkedHashSet::new ) ),
-                false );
+                bidirectional );
 
         UUID associationTypeId = edmApi.createAssociationType( expected );
         Assert.assertNotNull( "Assert association type shouldn't return null UUID.", associationTypeId );
 
         return expected;
+    }
+
+    public static AssociationType createAssociationType(
+            EntityType aet,
+            Set<EntityType> src,
+            Set<EntityType> dst ) {
+        return createAssociationType( aet, src, dst, false );
     }
 
     public static EntitySet createEntitySet() {
@@ -301,26 +311,28 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
         return createEntitySet( UUID.randomUUID(), entityType, linking, linkedEntitySetIds );
     }
 
-    public static EntitySet createEntitySet( UUID entitySetId,
-                                             EntityType entityType,
-                                             boolean linking,
-                                             Set<UUID> linkedEntitySetIds ) {
+    public static EntitySet createEntitySet(
+            UUID entitySetId,
+            EntityType entityType,
+            boolean linking,
+            Set<UUID> linkedEntitySetIds ) {
         EnumSet<EntitySetFlag> flags = EnumSet.of( EntitySetFlag.EXTERNAL );
-        if(linking) {
+        if ( linking ) {
             flags.add( EntitySetFlag.LINKING );
         }
         EntitySet newES = new EntitySet(
                 Optional.of( entitySetId ),
                 entityType.getId(),
-                RandomStringUtils.randomAlphanumeric( 10 ),
+                TestDataFactory.randomAlphanumeric( 10 ),
                 "foobar",
                 Optional.of( "barred" ),
                 ImmutableSet.of( "foo@bar.com", "foobar@foo.net" ),
                 Optional.of( linkedEntitySetIds ),
                 Optional.empty(),
-                Optional.of(flags));
+                Optional.of(flags),
+                Optional.empty());
 
-        Map<String, UUID> entitySetIds = edmApi.createEntitySets( ImmutableSet.of( newES ) );
+        Map<String, UUID> entitySetIds = entitySetsApi.createEntitySets( Set.of( newES ) );
 
         Assert.assertTrue( "Entity Set creation does not return correct UUID",
                 entitySetIds.values().contains( newES.getId() ) );
@@ -343,20 +355,40 @@ public class MultipleAuthenticatedUsersBase extends SetupEnvironment {
             Set<UUID> properties,
             List<UUID> srcIds,
             List<UUID> dstIds,
-            int numberOfEntries) {
+            int numberOfEntries ) {
         List<Map<UUID, Set<Object>>> edgeData = Lists.newArrayList(
-                TestDataFactory.randomStringEntityData(numberOfEntries, properties).values() );
+                TestDataFactory.randomStringEntityData( numberOfEntries, properties ).values() );
 
         List<DataEdge> edges = Streams
                 .mapWithIndex(
                         Stream.of( srcIds.toArray() ),
                         ( data, index ) -> {
                             int idx = (int) index;
-                            EntityDataKey srcDataKey = new EntityDataKey( srcEntitySetId, srcIds.get( idx) );
+                            EntityDataKey srcDataKey = new EntityDataKey( srcEntitySetId, srcIds.get( idx ) );
                             EntityDataKey dstDataKey = new EntityDataKey( dstEntitySetId, dstIds.get( idx ) );
-                            return new DataEdge( srcDataKey, dstDataKey, edgeData.get( idx ) ); } )
+                            return new DataEdge( srcDataKey, dstDataKey, edgeData.get( idx ) );
+                        } )
                 .collect( Collectors.toList() );
 
-        return new Pair<>(edgeEntitySetId, edges);
+        return new Pair<>( edgeEntitySetId, edges );
+    }
+
+
+    /**
+     * Helper methods for OrganizationsApi
+     */
+
+    public static Organization createOrganization() {
+        final var organization = TestDataFactory.organization();
+        organizationsApi.createOrganizationIfNotExists( organization );
+
+        return organization;
+    }
+
+    public static Role createRoleInOrganization( UUID organizationId ) {
+        final var role = TestDataFactory.role( organizationId );
+        organizationsApi.createRole( role );
+
+        return role;
     }
 }
